--- a/app/assets/stylesheets/tenon/atoms/buttons/standard.scss
+++ b/app/assets/stylesheets/tenon/atoms/buttons/standard.scss
@@ -1,7 +1,7 @@
 .btn {
   @include default-transition;
   @include z-depth-1;
-  @include font-size-smaller;
+  @include font-smaller;
   line-height: $btn-height;
   position: relative;
   display: inline-block;
