--- a/app/assets/stylesheets/tenon/atoms/typography/size-variables.scss
+++ b/app/assets/stylesheets/tenon/atoms/typography/size-variables.scss
@@ -1,5 +1,6 @@
 // Typography
-$default-font-size: 18;
+$body-size: 18;
+$body-line-height: $default-spacing;
 $h1-size: 44;
 $h1-line-height: 60;
 $h2-size: 38;
