--- a/app/views/tenon/styleguides/_atoms.html.haml
+++ b/app/views/tenon/styleguides/_atoms.html.haml
@@ -6,6 +6,13 @@
   %ul
     %li= link_to 'Colors', '#atom-colors'
     %li= link_to 'Color class helpers', '#atom-color-class-helpers'
+    %li
+      = link_to 'Typography', '#atom-typography'
+      %ul
+        %li= link_to 'Headings', '#atom-typography-headings'
+        %li= link_to 'Paragraph', '#atom-typography-paragraph'
+        %li= link_to 'Small', '#atom-typography-small'
 
 = render 'tenon/styleguides/atoms/colors'
 = render 'tenon/styleguides/atoms/color_helpers'
+= render 'tenon/styleguides/atoms/typography'
