--- a/app/views/tenon/styleguides/atoms/_colors.html.haml
+++ b/app/views/tenon/styleguides/atoms/_colors.html.haml
@@ -4,7 +4,7 @@
 
   .panel.block
     %h4 Neutral colors
-    .styleguide-colors.row
+    .styleguide-colors
       .styleguide-color-block
         %span.styleguide-color.bg-color-black
         %label Black
@@ -14,9 +14,10 @@
       .styleguide-color-block
         %span.styleguide-color.bg-color-grey
         %label Grey
+      .spacer
 
     %h4 Base colors
-    .styleguide-colors.row
+    .styleguide-colors
       .styleguide-color-block
         .styleguide-color.bg-color-primary
         %label Primary
@@ -26,9 +27,10 @@
       .styleguide-color-block
         .styleguide-color.bg-color-accent
         %label Accent
+      .spacer
 
     %h4 Notification colors
-    .styleguide-colors.row
+    .styleguide-colors
       .styleguide-color-block
         .styleguide-color.bg-color-required
         %label Required
@@ -41,3 +43,4 @@
       .styleguide-color-block
         .styleguide-color.bg-color-warning
         %label Warning
+      .spacer
