--- a/app/assets/stylesheets/tenon/atoms/typography/defaults.scss
+++ b/app/assets/stylesheets/tenon/atoms/typography/defaults.scss
@@ -3,8 +3,8 @@
 html,
 body {
   @include font-body;
-  font-size: $default-font-size * 1px; // required for rem
-  line-height: $default-spacing;
+  font-size: $body-size * 1px; // required for rem
+  line-height: $body-line-height;
   color: $primary-fg-color;
 }
 
@@ -20,45 +20,48 @@ a {
 
 // Default typography
 // ------------------------------------
-h1, h2, h3, h4, h5, h6, p,
-.h1, .h2, .h3, .h4, .h5, .h6, .p {
+h1, h2, h3, h4, h5, h6, p {
   margin: 0 0 $default-spacing/2;
 }
 
-h1, .h1 {
+h1, .font-h1 {
   @include font-h1;
 }
 
-h2, .h2 {
+h2, .font-h2 {
   @include font-h2;
 }
 
-h3, .h3 {
+h3, .font-h3 {
   @include font-h3;
 }
 
-h4, .h4 {
+h4, .font-h4 {
   @include font-h4;
 }
 
-h5, .h5 {
+h5, .font-h5 {
   @include font-h5;
 }
 
-h6, .h6 {
+h6, .font-h6 {
   @include font-h6;
 }
 
+.font-body {
+  @include font-body;
+}
+
 .font-small {
-  @include font-size-small;
+  @include font-small;
 }
 
 .font-smaller {
-  @include font-size-smaller;
+  @include font-smaller;
 }
 
 .font-smallest {
-  @include font-size-smallest;
+  @include font-smallest;
 }
 
 blockquote {
@@ -68,7 +71,7 @@ blockquote {
 }
 
 small {
-  @include font-size-smallest;
+  @include font-smallest;
 }
 
 strong {
@@ -80,6 +83,6 @@ em {
 }
 
 label, .label {
-  @include font-size-smallest;
+  @include font-smallest;
   color: $label-color;
 }
