--- a/app/assets/stylesheets/tenon/atoms/typography/font-size-mixins.scss
+++ b/app/assets/stylesheets/tenon/atoms/typography/font-size-mixins.scss
@@ -2,11 +2,11 @@
 @mixin font-size($size) {
   // Usage: @include font-size(16);
   font-size: unquote(0 + $size + "px");
-  font-size: unquote(0 + ($size / $default-font-size) + "rem");
+  font-size: unquote(0 + ($size / $body-size) + "rem");
 }
 
-@mixin line-height($line-height, $font-size: $default-font-size) {
-  // Usage: @include line-height(24); => uses $default-font-size
+@mixin line-height($line-height, $font-size: $body-size) {
+  // Usage: @include line-height(24); => uses $body-size
   // Usage: @include line-height(40, 24);
   line-height: $line-height / $font-size;
 }
