--- a/app/assets/stylesheets/tenon/atoms/typography/font-variables.scss
+++ b/app/assets/stylesheets/tenon/atoms/typography/font-variables.scss
@@ -5,13 +5,13 @@ $font-icon: "Material Icons";
 @import "//fonts.googleapis.com/css?family=Roboto:400,400italic,300italic,300,700,700italic";
 
 // Font family:
-$font-sans: "Roboto", "Helvetica Neue", Helvetica, sans-serif;
+$font-primary: "Roboto", "Helvetica Neue", Helvetica, sans-serif;
 
 // Font family:
-$font-family-body: $font-sans;
-$font-family-h1: $font-sans;
-$font-family-h2: $font-sans;
-$font-family-h3: $font-sans;
-$font-family-h4: $font-sans;
-$font-family-h5: $font-sans;
-$font-family-h6: $font-sans;
+$font-family-body: $font-primary;
+$font-family-h1: $font-primary;
+$font-family-h2: $font-primary;
+$font-family-h3: $font-primary;
+$font-family-h4: $font-primary;
+$font-family-h5: $font-primary;
+$font-family-h6: $font-primary;
