--- a/app/assets/stylesheets/tenon/molecules/tenon-content/base.scss
+++ b/app/assets/stylesheets/tenon/molecules/tenon-content/base.scss
@@ -41,7 +41,7 @@
       text-decoration: none;
     }
     span {
-      @include font-size-smaller;
+      @include font-smaller;
       position: relative;
       top: -2px;
       padding-left: $default-spacing / 4;
@@ -122,7 +122,7 @@
         @include vertical-align;
         text-transform: uppercase;
         span {
-          @include font-size-smaller;
+          @include font-smaller;
         }
       }
 
@@ -215,7 +215,7 @@
     }
   }
   textarea.caption, div.tn-tc-caption {
-    @include font-size-smaller;
+    @include font-smaller;
     width: 100%;
     margin: 0;
     padding: $default-spacing / 4;
