--- a/app/assets/stylesheets/tenon/atoms/typography/font-variables.scss
+++ b/app/assets/stylesheets/tenon/atoms/typography/font-variables.scss
@@ -15,3 +15,6 @@ $font-family-h3: $font-primary;
 $font-family-h4: $font-primary;
 $font-family-h5: $font-primary;
 $font-family-h6: $font-primary;
+
+// Margin bottom:
+$default-margin: $default-spacing/2;
