--- a/app/assets/stylesheets/tenon/atoms/expandable.scss
+++ b/app/assets/stylesheets/tenon/atoms/expandable.scss
@@ -8,12 +8,17 @@
     }
   }
   .expand {
+    @include default-transition;
     position: absolute;
     right: 0;
     bottom: 0;
     left: 0;
     text-align: center;
     background-color: $grey;
+    &:hover {
+      text-decoration: none;
+      background-color: $primary-color;
+    }
     i {
       @include font-size($standard-icon-size);
       display: block;
