--- a/app/assets/stylesheets/tenon/atoms/typography/font-style-mixins.scss
+++ b/app/assets/stylesheets/tenon/atoms/typography/font-style-mixins.scss
@@ -14,7 +14,7 @@
 @include font-style-generators;
 
 // Example usage:
-// @extend font-n4;
-// @extend font-n2;
-// @extend font-n6;
-// @extend font-i4;
+// @extend .font-n4;
+// @extend .font-n2;
+// @extend .font-n6;
+// @extend .font-i4;
