--- a/app/views/tenon/styleguides/_atoms.html.haml
+++ b/app/views/tenon/styleguides/_atoms.html.haml
@@ -7,6 +7,7 @@
     %li
       = link_to 'Colors', '#atom-colors'
       %ul
+        %li= link_to 'Variables', '#atom-color-variables'
         %li= link_to 'Class helpers', '#atom-color-class-helpers'
     %li
       = link_to 'Typography', '#atom-typography'
@@ -26,6 +27,7 @@
 
 
 = render 'tenon/styleguides/atoms/colors'
+= render 'tenon/styleguides/atoms/color_variables'
 = render 'tenon/styleguides/atoms/color_helpers'
 = render 'tenon/styleguides/atoms/typography'
 = render 'tenon/styleguides/atoms/icons'
