--- a/app/views/tenon/styleguides/atoms/_icons.html.haml
+++ b/app/views/tenon/styleguides/atoms/_icons.html.haml
@@ -16,4 +16,6 @@
         = expandable_toggle
         %p= "<i class='materialize-icons'>#{icon}</i>"
         %br/
-        %p= "Ruby: i('#{icon}')"
+        %p
+          %span.color-primary Ruby:
+          = "i('#{icon}')"
