--- a/app/assets/stylesheets/tenon/atoms/expandable.scss
+++ b/app/assets/stylesheets/tenon/atoms/expandable.scss
@@ -13,6 +13,7 @@
     right: 0;
     bottom: 0;
     left: 0;
+    width: 100%;
     text-align: center;
     background-color: $grey;
     &:hover {
