styleguide: typography and color variables and stuff

--- a/app/assets/stylesheets/tenon/atoms/typography/font-variables.scss
+++ b/app/assets/stylesheets/tenon/atoms/typography/font-variables.scss
@@ -6,6 +6,7 @@ $font-icon: "Material Icons";
 
 // Font family:
 $font-primary: "Roboto", "Helvetica Neue", Helvetica, sans-serif;
+$font-secondary: "Roboto", "Helvetica Neue", Helvetica, sans-serif;
 
 // Font family:
 $font-family-body: $font-primary;
