--- a/app/views/tenon/styleguides/_atoms.html.haml
+++ b/app/views/tenon/styleguides/_atoms.html.haml
@@ -18,6 +18,7 @@
         %li= link_to 'Blockquote', '#atom-typography-blockquote'
         %li= link_to 'Inline', '#atom-typography-inline'
         %li= link_to 'Style class helpers', '#atom-typography-styles'
+        %li= link_to 'Variables', '#atom-typography-variables'
     %li= link_to 'Icons', '#atom-icons'
     %li
       = link_to 'Forms', '#atom-forms'
@@ -30,5 +31,6 @@
 = render 'tenon/styleguides/atoms/color_variables'
 = render 'tenon/styleguides/atoms/color_helpers'
 = render 'tenon/styleguides/atoms/typography'
+= render 'tenon/styleguides/atoms/typography_variables'
 = render 'tenon/styleguides/atoms/icons'
 = render 'tenon/styleguides/atoms/forms'
