--- a/app/views/tenon/styleguides/atoms/_color_variables.html.haml
+++ b/app/views/tenon/styleguides/atoms/_color_variables.html.haml
@@ -8,21 +8,19 @@
       These are the 10 base colors that are used throughtout Tenon.
       You can over-ride any of these to change the look of Tenon.
     %code
-      %p
-        %span.color-primary Source:
-        app/assets/stylesheets/tenon/atoms/colors/named.scss
-      %p
-        %span.color-primary Put your changes here:
-        app/assets/stylesheets/client/color-names.scss
+      %span.color-primary Source:
+      app/assets/stylesheets/tenon/atoms/colors/named.scss
+    %code
+      %span.color-primary Put your changes here: 
+      app/assets/stylesheets/client/color-names.scss
 
     %h4 Variables
     %p
       As much as possible, each element has a custom color variable.
       This allows you to change one element without affecting others.
     %code
-      %p
-        %span.color-primary Source:
-        app/assets/stylesheets/tenon/atoms/colors/named.scss
-      %p
-        %span.color-primary Put your changes here:
-        app/assets/stylesheets/tenon/atoms/colors/variables.scss
+      %span.color-primary Source:
+      app/assets/stylesheets/tenon/atoms/colors/named.scss
+    %code
+      %span.color-primary Put your changes here:
+      app/assets/stylesheets/tenon/atoms/colors/variables.scss
