--- a/app/views/tenon/styleguides/_atoms.html.haml
+++ b/app/views/tenon/styleguides/_atoms.html.haml
@@ -23,14 +23,12 @@
     %li
       = link_to 'Forms', '#atom-forms'
       %ul
-        %li= link_to 'Text Fields', '#atom-forms-text-field'
-        %li= link_to 'Text Fields', '#atom-forms-text-area'
-
+        %li= link_to 'Default', '#atom-forms-default'
+        %li= link_to 'Outside Panel', '#atom-forms-outside'
+        %li= link_to 'HTML5', '#atom-forms-html5'
+        -# %li= link_to 'Tenon content', '#atom-forms-tenon'
 
 = render 'tenon/styleguides/atoms/colors'
-= render 'tenon/styleguides/atoms/color_variables'
-= render 'tenon/styleguides/atoms/color_helpers'
 = render 'tenon/styleguides/atoms/typography'
-= render 'tenon/styleguides/atoms/typography_variables'
 = render 'tenon/styleguides/atoms/icons'
 = render 'tenon/styleguides/atoms/forms'
