--- a/app/views/tenon/styleguides/atoms/_colors.html.haml
+++ b/app/views/tenon/styleguides/atoms/_colors.html.haml
@@ -44,3 +44,6 @@
         .styleguide-color.bg-color-warning
         %label Warning
       .spacer
+
+= render 'tenon/styleguides/atoms/color_variables'
+= render 'tenon/styleguides/atoms/color_helpers'
