--- a/app/views/tenon/fields/_date_time_picker.html.haml
+++ b/app/views/tenon/fields/_date_time_picker.html.haml
@@ -3,3 +3,4 @@
     = f.super_text_field "#{method_name}_date", value: f.object.send(method_name).try(:strftime, '%d %B, %Y'), data: { behavior: 'datepicker' }, class: 'stacked', placeholder: 'Day Month, Year'
   .inner4.omega
     = f.super_text_field "#{method_name}_time", value: f.object.send(method_name).try(:strftime, '%-l:%M %p %Z'), data: { behavior: 'timepicker' }, placeholder: '00:00 AM'
+  .spacer
