--- a/app/views/tenon/styleguides/_atoms.html.haml
+++ b/app/views/tenon/styleguides/_atoms.html.haml
@@ -16,6 +16,8 @@
         %li= link_to 'Paragraph', '#atom-typography-paragraph'
         %li= link_to 'Small', '#atom-typography-small'
         %li= link_to 'Blockquote', '#atom-typography-blockquote'
+        %li= link_to 'Unordered lists', '#atom-typography-ulists'
+        %li= link_to 'Ordered lists', '#atom-typography-olists'
         %li= link_to 'Inline', '#atom-typography-inline'
         %li= link_to 'Style class helpers', '#atom-typography-styles'
         %li= link_to 'Variables', '#atom-typography-variables'
