--- a/app/views/tenon/styleguides/atoms/_typography.html.haml
+++ b/app/views/tenon/styleguides/atoms/_typography.html.haml
@@ -20,10 +20,11 @@
         %p
           %span.color-primary Class:
           = ".font-h#{h}"
-          
+
 = render 'tenon/styleguides/atoms/typography/paragraphs'
 = render 'tenon/styleguides/atoms/typography/small'
 = render 'tenon/styleguides/atoms/typography/blockquote'
+= render 'tenon/styleguides/atoms/typography/lists'
 = render 'tenon/styleguides/atoms/typography/inline'
 = render 'tenon/styleguides/atoms/typography/styles'
 = render 'tenon/styleguides/atoms/typography/variables'
