--- a/app/views/tenon/styleguides/atoms/forms/_tenon_content.html.haml
+++ b/app/views/tenon/styleguides/atoms/forms/_tenon_content.html.haml
@@ -8,7 +8,7 @@
       %p f.tenon_content :content
     %p Requires setup in the model
     %code
-      class Sample < ActiveRecord::Base
+      class Sample < ApplicationRecord
       %br/
       &nbsp;&nbsp;tenon_content :content, i18n: true
       %br/
