--- a/app/assets/stylesheets/tenon/atoms/buttons/sizes.scss
+++ b/app/assets/stylesheets/tenon/atoms/buttons/sizes.scss
@@ -2,5 +2,5 @@
 $btn-height: 44px;
 
 // Floating action buttons
-$btn-floating-icon-size: 24;
-$btn-floating-size: 55px;
+$btn-fab-icon-size: 24;
+$btn-fab-size: 55px;
