--- a/app/assets/stylesheets/tenon/atoms/colors/variables.scss
+++ b/app/assets/stylesheets/tenon/atoms/colors/variables.scss
@@ -44,8 +44,8 @@ $btn-primary-bg-color: $primary-color;
 $btn-primary-fg-color: $white;
 $btn-secondary-bg-color: $secondary-color;
 $btn-secondary-fg-color: $white;
-$btn-floating-bg-color: $secondary-color;
-$btn-floating-fg-color: $white;
+$btn-fab-bg-color: $secondary-color;
+$btn-fab-fg-color: $white;
 $tool-toggle-bg-color: darken($primary-color, 10%);
 $tool-toggle-fg-color: $white;
 
