--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -44,6 +44,7 @@
 @import "./atoms/buttons/sizes";
 @import "client/button-sizes";
 @import "./atoms/buttons/standard";
+@import "./atoms/buttons/flat";
 @import "./atoms/buttons/floating";
 
 // Actions
