--- a/spec/dummy/app/views/devise/passwords/edit.html.haml
+++ b/spec/dummy/app/views/devise/passwords/edit.html.haml
@@ -1,22 +1,19 @@
+%h2 Change your password
 = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
+  = devise_error_messages!
   = f.hidden_field :reset_password_token
-  .row
-    %h4 Change your password
-
-  - unless resource.errors.empty?
-    .flash= resource.errors.full_messages.join('<br>').html_safe
-
-  .row.bordered
-    = f.label :password, class: "font"
-    = f.password_field :password, placeholder: '--'
-
-  .row.bordered
-    = f.label :password_confirmation, class: "font"
-    = f.password_field :password_confirmation, placeholder: '--'
-
-  .row.bordered
-    = f.submit "Change my password", class: 'btn btn-info'
-
-  .row.bordered
-    %p{:style => "text-align: right; margin-top: 10px; font-size: 12px;"}
-      = link_to "Sign In", new_user_session_path
+  .field
+    = f.label :password, "New password"
+    %br/
+    - if @minimum_password_length
+      %em
+        (#{@minimum_password_length} characters minimum)
+      %br/
+    = f.password_field :password, autofocus: true, autocomplete: "off"
+  .field
+    = f.label :password_confirmation, "Confirm new password"
+    %br/
+    = f.password_field :password_confirmation, autocomplete: "off"
+  .actions
+    = f.submit "Change my password"
+= render "devise/shared/links"
