--- a/spec/dummy/app/views/devise/registrations/new.html.haml
+++ b/spec/dummy/app/views/devise/registrations/new.html.haml
@@ -1,22 +1,20 @@
-%p.font Welcome to Tenon!&nbsp;Please register below.
+%main
+  .inner9
+    .panel.block
+      %h1 Sign up
+      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+        = devise_error_messages!
+        .field
+          = f.label :email
+          = f.email_field :email, autofocus: true
+          %br/
+        = f.label :password
+        = f.password_field :password, autocomplete: "off", placeholder: (@minimum_password_length ? "#{@minimum_password_length} characters minimum" : '')
+        %br/
 
-= error_messages_for resource
-
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
-  #login-box-top
-  #login-box
-    %span.label Email Address:
-    = f.text_field :email
-    .spacer{:style => "height:10px"}
-
-    %span.label Password:
-    = f.password_field :password
-    .spacer{:style => "height:10px"}
-
-    %span.label &nbsp;
-    = f.submit "Register"
-  #login-box-bottom
-    %span.label Remember Me?
-    = slider("Yes Please", f.radio_button(:remember_me, true, :checked => true), "No Thanks", f.radio_button(:remember_me, false))
-
-%p{:style => "text-align: right; margin-top: 10px; font-size: 12px;"}= link_to "Log in", "/login"
+        = f.label :password_confirmation
+        = f.password_field :password_confirmation, autocomplete: "off"
+        %br/
+        = f.submit "Sign up", class: 'btn'
+      %br/
+      = render "devise/shared/links"
