getting Users and Pages somewhat working with Tenon 2.0 stuff

--- a/spec/dummy/app/views/tenon/pages/new.html.haml
+++ b/spec/dummy/app/views/tenon/pages/new.html.haml
@@ -1,8 +1,1 @@
-%header
-  %h1 Create a New Page
-
-  .tools
-    = render "tenon/shared/section_header/sidebar_toggle"
-
-.main-content
-  = render :partial => "form"
+= render "form"
