--- a/spec/dummy/app/views/tenon/users/index.html.haml
+++ b/spec/dummy/app/views/tenon/users/index.html.haml
@@ -1,5 +1,6 @@
 = react_component 'ResourceIndexRoot',
     title: 'Users',
+    breadcrumbs: breadcrumb_links,
     recordsPath: users_path(format: 'json'),
     newPath: new_user_path,
     childComponents: { record: 'UserRecord'}
