--- a/spec/dummy/app/views/tenon/pages/_form.html.haml
+++ b/spec/dummy/app/views/tenon/pages/_form.html.haml
@@ -1,58 +1,43 @@
-- content_for :sidebar do
-  .sidebar
-    .content
-      %h2 Pages
-
-    %h4 Edit Options
-    %nav
-      %ul
-        %li.active= link_to 'Page Content', '#details', data: {toggle: 'tab'}
-        %li= link_to 'Search Optimization', '#seo', data: {toggle: 'tab'}
-
-    = i18n_language_nav(:'tenon/pages')
-
 = autosaving_form_for @page do |f|
-  = error_messages_for :page
-  .fields.large.tabs
-    .tab-pane.active#details
-      .form-group
-        = f.text_field :title, explanation: 'This is the title that shows up at the top of your page.'
+  .toolbar.bg-color-primary-dk10
+    = render 'tenon/shared/breadcrumbs'
+    .actions
+      - if can?(:publish, @page)
+        %button.action-btn.btn.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
 
-      .form-group= f.tenon_content :content
+      %a.action-icon.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
+        = i('more_vert')
 
-    .tab-pane#seo= render 'tenon/shared/seo_fields', f: f
+      %ul.dropdown-content#form-dropdown
+        - if can?(:create, Tenon::ItemVersion)
+          = render 'tenon/shared/draft_controls', obj: @page
 
-  .fields.small
-    %h4.box-label Details
-    .box
-      .form-group.bordered
-        = f.super_label :parent_id, 'Parent Page'
+        - if @page.persisted?
+          %li
+            = link_to @page, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link' do
+              = i('delete')
+
+  %main
+    = error_messages_for :page
+
+    = f.text_field :title, required: true, class: 'form-title-field', explanation: 'This is the title that shows up at the top of your page.'
+
+    .form-label Content
+    .panel.block
+      = f.tenon_content :content
+
+    .form-label Details
+    .panel.block
+      .row
+        .inner4
         = f.collection_select :parent_id, @potential_parents, :id, :option_title, {:include_blank => "(No Parent)"}
-
-      .form-group.inline.bordered
-        = f.check_box :show_in_menu, class: 'tn-checkbox-right'
-        = f.super_label :show_in_menu, "Show in Menu?"
-
-      .form-group.inline.bordered
-        = f.check_box :show_contact_form, class: 'tn-checkbox-right'
-        = f.super_label :show_contact_form, "Show Contact Form?"
-
-    %h4.box-label Publish Your Page
-    .box
-      .form-group
+        .inner4
+          = f.check_box :show_in_menu, class: 'tn-checkbox-right'
+        .inner4.omega
+          = f.check_box :show_contact_form, class: 'tn-checkbox-right'
+      .row
         = f.text_field :publish_at, label: "Publish Date", data: {behaviour: 'datetime-picker'}, placeholder: '--'
 
-      .row.content
-        - if can?(:publish, @page)
-          %button.btn.btn-comp.btn-block.submit{ data: { disable_with: "Please wait..." } } Save
+    = render 'tenon/shared/seo_fields', f: f
 
-        - if can?(:create, Tenon::ItemVersion)
-          = save_draft_button(@page)
-          .last-autosave
-
-      %hr
-      .content
-        = clear_draft_link if params[:version]
-        = load_draft_link(@page)
-        - if @page.persisted?
-          = link_to "Delete", @page, data: {method: :delete, confirm: 'Are you sure you want to delete this?'}, class: 'delete-link'
+    .spacer
