--- a/spec/dummy/app/views/tenon/users/new.html.haml
+++ b/spec/dummy/app/views/tenon/users/new.html.haml
@@ -1,8 +1,1 @@
-%header
-  %h1 New User
-
-  .tools
-    = render "tenon/shared/section_header/sidebar_toggle"
-
-.main-content
-  = render :partial => "form"
+= render "form"
