Get rid of a whole lot of javascript files we don't want

--- a/app/views/layouts/tenon/application.html.haml
+++ b/app/views/layouts/tenon/application.html.haml
@@ -13,11 +13,11 @@
     = stylesheet_link_tag '//fonts.googleapis.com/icon?family=Material+Icons'
     = stylesheet_link_tag 'tenon/tenon'
     = javascript_include_tag '/ckeditor/ckeditor'
-    = javascript_include_tag 'tenon/tenon_manifest'
+    = javascript_include_tag 'tenon/application'
 
   %body{data: { controller: params[:controller], action: params[:action] } }
     = render 'tenon/shared/util_nav'
-    
+
     #main-nav.drawer
       %p.app-info
         = link_to '/tenon' do
